--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,4 @@
-<router-outlet></router-outlet>
+<p>home works!</p>
+<!-- <app-banner></app-banner> -->
+
 <button mat-raised-button color="primary">Primary</button>
