--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-<p>home works!</p>
 <!-- <app-banner></app-banner> -->
 
-<button mat-raised-button color="primary">Primary</button>
+<!-- <h1>{{'title' | transloco }}</h1> -->
