--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,39 @@
-/* You can add global styles to this file, and also import other style files */
+html,
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Montserrat';
+    background-color: #FFFDF6;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+h1,
+h2,
+h3 {
+    color: #97AB78;
+    text-align: center;
+}
+
+button {
+    background-color: #97AB78;
+    color: white;
+    border: 2px solid #DAD2BE;
+    padding: 15px;
+    padding-left: 50px;
+    padding-right: 50px;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+.onedoc-url {
+    display: block;
+    margin: auto;
+    background-color: #97AB78;
+    color: white;
+    border: 2px solid #DAD2BE;
+    padding: 15px;
+    width: 300px;
+    border-radius: 5px;
+    text-decoration: none;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
