--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,39 @@
-<!-- <app-banner></app-banner> -->
+<app-banner></app-banner>
 
-<!-- <h1>{{'title' | transloco }}</h1> -->
+<h1>Docteur et Homéopathe</h1>
+
+<div class="container">
+    <div class="cols">
+        <div class="col">
+            <p>
+                Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un
+                paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe
+                Ceci
+                est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un
+                paragraphe Ceci est un paragraphe Ceci est un paragraphe
+            </p>
+            <p>
+                Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un
+                paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe
+                Ceci
+                est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un
+                paragraphe Ceci est un paragraphe Ceci est un paragraphe
+            </p>
+            <p>
+                Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un
+                paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe
+                Ceci
+                est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un paragraphe Ceci est un
+                paragraphe Ceci est un paragraphe Ceci est un paragraphe
+            </p>
+        </div>
+        <div class="col">
+            <img src="../assets/img/profil.jpg" alt="">
+        </div>
+    </div>
+
+
+    <a class="onedoc-url" href="https://www.onedoc.ch/fr/" target="_blank">Prendre rendez-vous</a>
+</div>
+
+<app-footer></app-footer>
