Implementation of lazy loading for home-module

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <app-banner></app-banner>
 
 <h1>Docteur et Homéopathe</h1>
+<h1>{{'title' | transloco}}</h1>
 
 <div class="container">
     <div class="cols">
