--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,6 +22,8 @@ button {
     padding-right: 50px;
     border-radius: 5px;
     text-decoration: none;
+    width: 90%;
+    max-width: 350px;
 }
 
 .onedoc-url {
