--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,7 +2,9 @@ nav {
     position: fixed;
     top: 0;
     width: 100%;
-    background-color: rgba(184, 184, 184, 0.627);
+    background-color: rgba(155, 155, 155, 0.639);
+    height: 64px;
+    color: white;
 
     .nav-item-container {
         display: flex;
@@ -11,15 +13,70 @@ nav {
 
         .nav-item {
             flex: 1;
-            text-align: center;
-            padding: 5px;
-            padding-top: 20px;
-            padding-bottom: 20px;
+            height: 64px;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
             font-weight: bold;
+            justify-content: center;
+
         }
 
         .nav-item:hover {
-            background-color: rgba(255, 255, 255, 0.388);
+            background-color: white;
+            cursor: pointer;
         }
+    }
+}
+
+.burger {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 55px;
+    padding-top: 5px;
+    background-color: #97AB78;
+    color: white;
+    border: 2px solid #DAD2BE;
+
+    .layer {
+        width: 80%;
+        margin: auto;
+        height: 3px;
+        background-color: #DAD2BE;
+        margin-top: 10px;
+    }
+}
+
+.burger:hover {
+    cursor: pointer;
+}
+
+.show {
+    display: block;
+    background-color: rgba(72, 72, 72, 0.817);
+}
+
+@media (max-width: 1100px) {
+    nav {
+        height: 100vh;
+        display: none;
+
+        .nav-item-container {
+            height: 50vh;
+            margin-top: 25vh;
+            flex-direction: column;
+
+
+            .nav-item:hover {
+                background-color: rgb(191, 191, 191);
+            }
+        }
+    }
+
+    .burger {
+        display: block;
     }
 }
