--- a/src/app/consultation/homeo/homeo.component.scss
+++ b/src/app/consultation/homeo/homeo.component.scss
@@ -2,15 +2,20 @@
     width: 100%;
     max-width: 1024px;
     margin: auto;
-    // gap: 50px;
     text-align: center;
+
+    .col-full {
+        text-align: justify;
+    }
 
     .cols {
         display: flex;
 
         .col {
-            padding: 15px;
             flex: 1;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
 
             img {
                 width: 70%;
@@ -27,19 +32,5 @@
     button {
         margin: auto;
         margin: 25px;
-    }
-}
-
-@media (max-width: 1100px) {
-    .container {
-        .cols {
-            flex-direction: column;
-
-            .col {
-                img {
-                    margin: 0;
-                }
-            }
-        }
     }
 }
