--- a/src/app/consultation/homeo/homeo.component.html
+++ b/src/app/consultation/homeo/homeo.component.html
@@ -37,4 +37,15 @@
             <app-dropper>Bonsoir</app-dropper>
         </div>
     </div>
+
+    <h2>Questions fréquentes</h2>
+    <div class="cols">
+        <div class="col">
+            <app-dropper>Question 1</app-dropper>
+            <app-dropper>Question 2</app-dropper>
+            <app-dropper>Question 3</app-dropper>
+        </div>
+    </div>
 </div>
+
+<app-footer></app-footer>
