--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -2,6 +2,7 @@ footer {
     background-color: #97AB78;
     padding: 15px;
     color: white;
+    margin-top: 70px;
 
     .container {
         width: 100%;
