--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
         <div class="nav-item" (click)="hiddeNavbar()" routerLink="/">Accueil</div>
         <div class="nav-item" (click)="hiddeNavbar()" routerLink="consultation/homeo">Consultation homéopathique</div>
         <div class="nav-item" (click)="hiddeNavbar()" routerLink="consultation/phyto">Consultation phytothérapie</div>
-        <div class="nav-item" (click)="hiddeNavbar()" routerLink="info">Informations pratiques</div>
+        <div class="nav-item" (click)="hiddeNavbar()" routerLink="infos">Informations pratiques</div>
     </div>
 </nav>
 
@@ -23,3 +23,5 @@
         {{language.code}}
     </li>
 </ul>
+
+<app-footer></app-footer>
