--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
 nav {
+    z-index: 99;
     position: fixed;
     top: 0;
     width: 100%;
@@ -30,6 +31,7 @@ nav {
 }
 
 .burger {
+    z-index: 100;
     display: none;
     position: fixed;
     top: 0;
@@ -56,7 +58,7 @@ nav {
 
 .show {
     display: block;
-    background-color: rgba(72, 72, 72, 0.817);
+    // background-color: rgba(72, 72, 72, 0.817);
 }
 
 @media (max-width: 1100px) {
@@ -66,9 +68,14 @@ nav {
 
         .nav-item-container {
             height: 50vh;
-            margin-top: 25vh;
+            // margin-top: 25vh;
             flex-direction: column;
+            background-color: white;
 
+            .nav-item {
+                color: black;
+                border-bottom: 1px solid black;
+            }
 
             .nav-item:hover {
                 background-color: rgb(191, 191, 191);
