--- a/src/app/consultation/dropper/dropper.component.html
+++ b/src/app/consultation/dropper/dropper.component.html
@@ -1,7 +1,7 @@
 <div class="dropper">
     <div class="dropper-btn" (click)="displayDropper()">
         <div class="dropper-title">
-            <ng-content></ng-content>
+            <ng-content select="header"></ng-content>
         </div>
 
         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-circle-plus" width="24" height="24"
@@ -15,15 +15,6 @@
     </div>
 
     <div class="dropper-content" [ngClass]="{'show': showDropperContent}">
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper
-        Bonjour je suis le contenu du dropper.
+        <ng-content></ng-content>
     </div>
 </div>
