--- a/src/app/shared/banner/banner.component.scss
+++ b/src/app/shared/banner/banner.component.scss
@@ -4,4 +4,5 @@
     background-image: url('../../../assets/img/lake.jpg');
     background-size: cover;
     background-position-y: 50%;
+    background-position-x: center;
 }
