--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,4 +38,52 @@ button {
     text-decoration: none;
     margin-top: 50px;
     margin-bottom: 50px;
+    text-align: center;
+}
+
+.container {
+    display: flex;
+    flex-direction: column;
+    max-width: 1024px;
+    margin: auto;
+
+    .cols {
+        display: flex;
+
+        .col {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            padding: 15px;
+            flex: 1;
+            text-align: justify;
+
+            img {
+                width: 70%;
+                margin-left: 15%;
+            }
+
+            p {
+                text-align: justify;
+                margin-top: 0;
+            }
+        }
+    }
+
+    button {
+        margin: auto;
+        margin: 25px;
+    }
+}
+
+@media (max-width: 1100px) {
+    .container {
+        .cols {
+            flex-direction: column;
+        }
+    }
+
+    button {
+        width: 90%;
+    }
 }
