Add title in banner

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<app-banner></app-banner>
+<app-banner>Homéopathe uniciste</app-banner>
 
 <h1>Docteur et Homéopathe</h1>
 <!-- <h1>{{'title' | transloco}}</h1> -->
