--- a/src/app/shared/banner/banner.component.scss
+++ b/src/app/shared/banner/banner.component.scss
@@ -5,4 +5,14 @@
     background-size: cover;
     background-position-y: 50%;
     background-position-x: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title {
+    font-size: 3em;
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
 }
