Add custom marker to the map component, try to implement multi language by folder language for each page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <app-banner>Homéopathe uniciste</app-banner>
 
 <h1>Docteur et Homéopathe</h1>
-<!-- <h1>{{'title' | transloco}}</h1> -->
+<h1>{{'title' | transloco}}</h1>
 
 <div class="container">
     <div class="cols">
